# GCP-AI-Governor

./: .gcloudignore  .gitignore  Dockerfile  LICENSE  License  Makefile  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  cloudbuild.yml  diagram-build.yml  eternum-net-guard.yml  generate-diagram.yml  test.yml
app/: main.py
cloudbuild/: cloudbuild.yaml  live-mode-approve.yaml
daemon/: constants.py  main.py
daemon/policies/: policy_engine.py
daemon/simulator/: simulate_event.py
daemon/tools/: actions.py
docs/: ARCHITECTURE.md  architecture.mmd
docs/migrations/: DAEMONIC_CODEX_IMPORT.md
infra/: bq_transcripts.sql  logging_sink_setup.sh
samples/events/: admin_role.json  heartbeat.json  owner_role.json  viewer_role.json
scripts/: smoke_test.sh
tests/: test_endpoints.py  test_policy_engine.py
